<resources>
    <string name="app_name">SleepSafe</string>
    <string name="title_activity_dashboard">SleepSafe</string>

    <string name="pref_device_key">device_key</string>
    <string name="pref_device_ip">device_ip</string>
    <string name="pref_device_port">device_port</string>
    <string name="pref_device_name">device_name</string>
    <string name="pref_app_username">app_username</string>

    <string name="action_settings">Settings</string>

    <string name="pref_current_user">pref_current_users</string>

    <string name="db_heart_rate">Heart Rate</string>
    <string name="db_spo2">Blood Oxygen</string>
    <string name="title_activity_hr">Heart Rate</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="button_start">Start Service</string>
    <string name="button_stop">Stop Service</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_graph_grid">Enable graph grid lines</string>
    <string name="pref_description_graph_grid">This will toggle the use of grid lines in all app graphs.</string>

    <string name="pref_title_graph_cubic">Enable graph cubic approximations</string>
    <string name="pref_description_graph_cubic">This will toggle the use of cubic smoothing on data lines in all app graphs.</string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_color_graph_title">Graph Color Scheme</string>
    <string-array name="pref_color_graph_items">
        <item>App Theme Default</item>
        <item>High Contrast</item>
    </string-array>
    <string-array name="pref_color_graph_values">
        <item>default</item>
        <item>high_contrast</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="alarm_add">
        <item>Greater Than</item>
        <item>Less Than</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_up">Register</string>
    <string name="action_guest_sign_in">Guest Sign In (Demo Mode Only)</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_spo2">Blood Oxygen</string>
    <string name="default_db_value">--</string>
    <string name="db_bpm_tag">\u00A0BPM</string>
    <string name="db_percent_tag">\u00A0%</string>
    <string name="title_activity_devices">DevicesActivity</string>
    <string name="title_activity_device">Select a Device</string>
    <string name="device_name">device_name</string>
    <string name="action_logout">Logout</string>
    <string name="pref_name">sleepsafe_pref_data</string>
    <string name="pref_alarm_max_hr">pref_alarm_max_hr</string>
    <string name="pref_alarm_min_hr">pref_alarm_min_hr</string>


</resources>
