<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="User Data">

        <EditTextPreference
            android:capitalize="words"
            android:defaultValue="@string/pref_default_display_name"
            android:inputType="textCapWords"
            android:key="example_text"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_title_display_name" />

        <Preference
            android:title="Clear user data"
            android:key="pref_clear_data" />


    </PreferenceCategory>


    <PreferenceCategory android:title="Graph Options">
        <SwitchPreference
            android:defaultValue="true"
            android:key="pref_graph_draw_grid"
            android:summary="@string/pref_description_graph_grid"
            android:title="@string/pref_title_graph_grid" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="pref_graph_draw_cubic"
            android:summary="@string/pref_description_graph_cubic"
            android:title="@string/pref_title_graph_cubic" />


        <ListPreference
            android:entries="@array/pref_color_graph_items"
            android:entryValues="@array/pref_color_graph_values"
            android:defaultValue="default"
            android:key="pref_graph_scheme"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_color_graph_title" />
    </PreferenceCategory>

</PreferenceScreen>
